--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
       justify-content: center; gap: 12px;
       font-family: monospace;
     }
+    #terminal.show {
+  opacity: 1;
+  pointer-events: all;
+    }
     #termInput {
       width: 60%; max-width: 320px;
       padding: 6px 10px; border: none;
@@ -181,7 +185,6 @@
       <div id="adminPwdBox">
         <!-- Password Entry -->
         <input id="adminPwd" type="password" placeholder="Password">
-        <button id="pwdBtn">Enter</button>
       </div>
     </div>
   </section>
@@ -228,15 +231,17 @@
       login.classList.remove('show');
       desktopUI.style.display = 'flex';
     };
-    function submitAdminLogin() {
-      if (document.getElementById('adminPwd').value === 'password123') {
-        adminLogin.classList.add('hidden');
-        adminLogin.classList.remove('show');
-        desktopUI.style.display = 'flex';
-      } else {
-        alert('Wrong password');
-      }
+    document.getElementById('adminPwd').addEventListener('keydown', e => {
+  if (e.key === 'Enter') {
+    const pwd = e.target.value;
+    if (pwd === 'password123') {
+      adminLogin.classList.add('hidden');
+      adminLogin.classList.remove('show');
+    } else {
+      alert('Wrong password');
     }
+  }
+});
     document.getElementById('pwdBtn').onclick = submitAdminLogin;
 
     // ——— Terminal toggle ———
@@ -257,14 +262,15 @@
   if (e.key === 'Enter') {
     const input = termInput.value.trim().toLowerCase();
     if (input === 'sudo admin login') {
-      terminal.classList.add('hidden');
+      terminal.classList.remove('show');
       terminalOpen = false;
       document.getElementById('login').classList.add('hidden');
       document.getElementById('adminLogin').classList.remove('hidden');
       adminPwdBox.style.display = 'block';
       document.getElementById('adminPwd').focus();
-    } else if (input === 'exit') {
-      terminal.classList.add('hidden');
+    }
+    else if (input === 'exit') {
+      terminal.classList.add('show');
       terminalOpen = false;
     } else {
       alert('Unknown command');
