--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/5977/5977575.png">
+  <link rel="icon" type="image/png" href="https://www.flaticon.com/free-icon/coding_3242257?term=coding&page=1&position=9&origin=search&related_id=3242257">
   <title>Phillips OS</title>
   
   <!-- ========== GLOBAL STYLES ========== -->
@@ -32,7 +32,7 @@
     /* ========== BOOT SCREEN STYLES ========== */
     #bootLogo {
       width:100px; height:100px;
-      background:url(https://cdn-icons-png.flaticon.com/512/5977/5977575.png) center/contain no-repeat;
+      background:url(https://www.flaticon.com/free-icon/tea_1229063?term=green%20tea&page=19&position=74&origin=search&related_id=1229063) center/contain no-repeat;
       margin-bottom:20px
     }
     #bootBar {
