--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" type="image/png" href="https://www.flaticon.com/free-icon/coding_3242257?term=coding&page=1&position=9&origin=search&related_id=3242257">
+  <link rel="icon" type="image/png" href="https://cdn-icons-png.flaticon.com/512/3241/3241859.png">
   <title>Phillips OS</title>
   
   <!-- ========== GLOBAL STYLES ========== -->
@@ -32,7 +32,7 @@
     /* ========== BOOT SCREEN STYLES ========== */
     #bootLogo {
       width:100px; height:100px;
-      background:url(https://www.flaticon.com/free-icon/tea_1229063?term=green%20tea&page=19&position=74&origin=search&related_id=1229063) center/contain no-repeat;
+      background:url(https://cdn-icons-png.flaticon.com/512/1229/1229063.png) center/contain no-repeat;
       margin-bottom:20px
     }
     #bootBar {
@@ -218,7 +218,7 @@
   <!-- ========== GUEST DESKTOP ========== -->
   <section id="desktopUI">
     <div class="menubar">
-      <div><img src="https://cdn-icons-png.flaticon.com/512/5977/5977575.png" style="height:16px" alt="Logo"></div>
+      <div><img src="https://cdn-icons-png.flaticon.com/512/1229/1229165.png" style="height:16px" alt="Logo"></div>
       <div>File</div><div>Edit</div><div>View</div>
       <div class="clock"></div>
     </div>
@@ -228,7 +228,7 @@
   <!-- ========== ADMIN DESKTOP ========== -->
   <section id="adminDesktop">
     <div class="menubar">
-      <div><img src="https://cdn-icons-png.flaticon.com/512/5977/5977575.png" style="height:16px" alt="Logo"></div>
+      <div><img src="https://cdn-icons-png.flaticon.com/512/1229/1229165.png" style="height:16px" alt="Logo"></div>
       <div>Admin</div><div>Tools</div><div>Settings</div>
       <div class="clock"></div>
     </div>
